--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <ul>
         <li><img src="/assets/img-slider-liberte.jpg" alt="slide extranet-2">
           <div style="cursor:pointer;"
-            onclick="window.location.href('https://extranet.maxance.com/Login');">
+            onclick="window.location.href('/espace-partenaire');">
             <h2>Extranet maXance</h2>
             <p>Pilotez votre activité en temps réel sur votre nouvel Extranet</p> <a
-              href="https://extranet.maxance.com/"><span>plus</span></a>
+              href="/espace-partenaire"><span>plus</span></a>
           </div>
         </li>
       </ul>
