--- a/espace-partenaire/index.html
+++ b/espace-partenaire/index.html
@@ -75,7 +75,7 @@
     </div>
     <p></p>
     <article role="main">
-      <div class="item-page no-cols">
+      <div class="item-page no-cols espacepro">
         <h1>Espace partenaire</h1>
         <h2>SERVICE MOMENTANEMENT INDISPONIBLE</h2>
         <content>
