--- a/espace-partenaire/index.html
+++ b/espace-partenaire/index.html
@@ -87,7 +87,7 @@
         
           <header id="rassure"> <strong>Cher partenaire, avant toute chose, soyez rassuré&nbsp;:</strong><br>
           Les garanties des contrats de vos assurés sont toujours actives.</header>		
-          <p>
+          <p style="margin-top: 40px;">
           Nos équipes restent à votre disposition du lundi au vendredi, de 9h00 à 18h30, et le samedi de 9h00 à 12h30 au&nbsp;:
         </p>
         <p>
