--- a/espace-partenaire/index.html
+++ b/espace-partenaire/index.html
@@ -87,7 +87,7 @@
         
           <header id="rassure"> <strong>Cher partenaire, avant toute chose, soyez rassuré&nbsp;:</strong><br>
           Les garanties des contrats de vos assurés sont toujours actives.</header>		
-          <p style="margin-top: 40px;">
+          <p style="margin-top: 40px;text-align: center;">
           Nos équipes restent à votre disposition du lundi au vendredi, de 9h00 à 18h30, et le samedi de 9h00 à 12h30 au&nbsp;:
         </p>
         <p>
@@ -98,11 +98,9 @@
               <p class="question">Vous souhaitez souscrire, modifier, gérer, ou obtenir des informations sur un contrat&nbsp;?</p>
               <p class="reponse"> Contactez votre facilitateur de business sur sa ligne directe ou un conseiller au 01&nbsp;49&nbsp;15&nbsp;33&nbsp;00, 
   ou par mail à l'adresse suivante : <a href="mailto:maxance.assurances.mc@gmail.com">maxance.assurances.mc@gmail.com</a></p>
-            </li>
-            <li>
-              <h2>Autres numéros utiles</h2>
-              
-            </li>
+            </li></ul>
+            <h2>Autres numéros utiles</h2>
+            <ul>
             <li>
               <p class="question">Déclarer / Gérer un sinistre&nbsp;:</p>
               <p class="reponse"> <strong>01&nbsp;49&nbsp;15&nbsp;33&nbsp;00</strong> 
